Fix some layout problems

--- a/instruments/ag_oscilloscope/ag_oscilloscope.css
+++ b/instruments/ag_oscilloscope/ag_oscilloscope.css
@@ -120,11 +120,11 @@
 	display: inline;
 }
 
-.ag_osc .display .ch1 {
+.ag_osc .display .channel.ch1 {
 	top: 1px; left: 7px;
 }
 
-.ag_osc .display .ch2 {
+.ag_osc .display .channel.ch2 {
 	top: 1px; left: 67px;
 }
 
@@ -253,13 +253,16 @@
 	/* #006633 */
 	margin: -1px;
 	text-align: center;
+	vertical-align: top;
 }
 
 .ag_osc .display .menubar .menubox .title
 {
-	position: absolute;
-	top: 2px;
+	/*position: absolute;*/
+	/*top: 2px;*/
 	width: 50px;
+	padding-top: 2px;
+	padding-bottom: 2px;
 }
 
 .ag_osc .display .menubar .menubox .title.bigfont
@@ -269,8 +272,8 @@
 
 .ag_osc .display .menubar .menubox .value
 {
-	position: absolute;
-	top: 15px;
+	/*position: absolute;*/
+	/*top: 15px;*/
 	width: 50px;
 }
 
